--- a/app/views/home/topstories.html.erb
+++ b/app/views/home/topstories.html.erb
@@ -9,6 +9,7 @@
 <% @topstories.each do | story|%>
 <%=render 'stories',answer:story%>
 <% end%>
+</div>
 <script type="text/javascript">
 	$(document).ready(function(){
 	window.question_load_more_active=false;
