--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,10 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #top{
 	width:970px;
-	height:160px;
+	height:230px;
 	display:flex;
 	justify-content:flex-start;
 	border-bottom:2px solid #e2e2e2;
+  margin-top:30px;
 	div[id="left"]{
 	     width:170px;
 	     img{
@@ -16,12 +17,23 @@
 	        margin-top:6px;
 	        border:1px solid #e2e2e2;
 	     }
+       input[type="submit"]{
+          color:black;
+          padding:1px;
+          cursor:pointer;
+          font-weight: 400;
+          width:80px;
+          margin-top:4px;
+          font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+          position:absolute;
+       }
 	}
 	div[id="right"]{
+       margin-top:20px;
 	     flex-grow:1;
 	     padding:10px;
 	     font-family:'q_serif',Georgia,Times,"Times New Roman",serif;
-	     h5{
+	     h3{
 	        color:#9c9c9c;
 	        padding-top:7px;
 	     }
@@ -164,7 +176,7 @@
 }
 }
 #newquestions{
-	 width:500px;
+	 width:600px;
 	 min-height:400px;
 	 display:flex;
 	 flex-direction:column;
@@ -176,7 +188,7 @@
 	         padding:15px;
 	         border:1px solid #efefef;
 	         display:flex;
-             width:480px;
+             width:600px;
              height:content;
              min-height:80px;
              margin-top:10px;
@@ -241,7 +253,7 @@
              padding:15px;
              border:1px solid #efefef;
              display:flex;
-             width:480px;
+             width:600px;
              height:content;
              min-height:80px;
              margin-top:10px;
@@ -254,7 +266,7 @@
                font-size: 18px;
              }
              #bar{
-                width:470px;
+                width:580px;
                 height:1px;
                 background-color:#efefef;
                 margin-top:5px;
@@ -268,13 +280,6 @@
                 padding-top:2px;
                 padding-left:5px;
             }
-             #bar{
-                width:470px;
-                height:1px;
-                background-color:#efefef;
-                margin-top:5px;
-                margin-bottom:10px;
-             }
              #header{
                  display:flex;
                  align-items:center;
@@ -337,5 +342,62 @@
                 }
         }
 
-  }
- 
+}
+#questionlist{
+            background-color:#fff;
+            border-radius:7px;
+            margin-top:8px;
+            padding:15px;
+            border:1px solid #efefef;
+            display:flex;
+            width:580px;
+            height:content;
+            min-height:50px;
+            margin-top:10px;
+            display:flex;
+            flex-direction:column;
+            #questiontext{
+               font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+               font-weight: bold;
+               line-height: 1.3;
+               font-size: 13px;
+            }
+            a{
+                 text-decoration:none;
+                 color:black;
+                 font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+                 line-height: 1.3;
+                 font-size: 13px;
+                 margin-top:20px;
+                 width:60px;
+            }
+            a:hover{
+                background-color:#fff;
+                color:#2b6dad;
+                width:50px;
+            }
+}
+#optionsprofile{
+               margin-top:10px;
+               a{ font-size:18px;
+                   text-decoration:none;
+                   color:#2b6dad;
+                   padding:2px 6px 2px 6px;
+                   border-radius:2px;
+                   background-color:#f1f8fb;
+                }
+                a:hover{
+                    border:1px solid #2b6dad;
+                }
+               
+   
+}
+#questionlist{
+   
+                    color:#333;
+                    font-family: 'q_serif',Georgia,Times,"Times New Roman",serif;
+                    line-height: 1.4;
+                    font-size: 13px;
+                    margin-top:8px 
+    
+} 
