--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -321,7 +321,7 @@
               background-color:#fff;
               cursor:pointer;
           }
-          #footer{
+          .footer{
           margin-top:10px;
                 a{ font-size:13px;
                    text-decoration:none;
