--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -7,6 +7,7 @@
 	}
 	display:flex;
 	align-items:center;
+	justify-content:flex-start;
 	form{
 	   margin-left:8px;
 	   input[type="text"]{
@@ -19,12 +20,39 @@
 	   input[type="submit"]{
 	               font-size:15px;
                    text-decoration:none;
+                   display:none;
                    color:#2b6dad;
-                   padding:4px 8px 4px 8px;
+                   padding:2px 8px 2px 8px;
                    border-radius:2px;
                    background-color:#f1f8fb;
                    border:none;
                    cursor:pointer;
 	   }
 	}
+}
+#comment{
+     margin-top:10px;
+     display:flex;
+     flex-direction:column;
+     justify-content:center;
+     section{
+         display:flex;
+         align-items:center;
+	     img{
+	       width:20px;
+	       height:20px;
+	       border-radius:50%;
+	    }
+	    content{
+	       padding-left:8px;
+	       font-family: Georgia,Times,"Times New Roman",serif;
+           font-size: 13px;
+           line-height: 1.5;
+           color: #333;
+	    }
+	 }
+	 section[id="comment_text"]{
+	            margin-left:20px;
+	 }
+	 
 }
