--- a/app/views/comments/loadmore.js.erb
+++ b/app/views/comments/loadmore.js.erb
@@ -1,2 +1,2 @@
- $('comment_more<%=@answerid%>').remove();
+ $('#loadmoreblock<%=@answerid%>').empty();
  $('#footer<%=@answerid%>').append("<%= escape_javascript (render 'showcomments',answerid: @answerid,comments: @comments,more: false)%>");
