--- a/app/views/home/_stories.html.erb
+++ b/app/views/home/_stories.html.erb
@@ -32,7 +32,7 @@
 	   	<% if Upvote.where(upvoteable_id:answer.id,upvoteable_type:"answer",user_id:current_user.id).length>0%>
 	   	<%= link_to "DownVote | "+answer.upvotecount.to_s, url_for(controller: :upvote,action: :upvote_answer,answer: answer.id),    method: :post,remote: true,id: "button_#{answer.id}"%>
 	   	<%else%>
-	   	<%= link_to "Upvote | "+answer.upvote.count.to_s, url_for(controller: :upvote,action: :upvote_answer,answer: answer.id),    method: :post,remote: true,id: "button_#{answer.id}"%>
+	   	<%= link_to "Upvote | "+answer.upvotecount.to_s, url_for(controller: :upvote,action: :upvote_answer,answer: answer.id),    method: :post,remote: true,id: "button_#{answer.id}"%>
 	   	<%end%>
 	   	<%= link_to "Comment | ",url_for(controller: :comments,action: :docomment,answerid: answer.id),method: :get,remote: true,id:"comment_#{answer.id}"%>
  </section>
