--- a/app/views/home/_question.html.erb
+++ b/app/views/home/_question.html.erb
@@ -21,7 +21,7 @@
 	   	<%= link_to "Upvote | "+Upvote.where(upvoteable_id:question.id,upvoteable_type:"question").length.to_s, url_for(controller: :upvote,action: :upvote,question: question.id),    method: :post,remote: true,id: "button_#{question.id}"%>
 	   	<%end%>
    	   	 <span id="answer_count">
-	   	<%= link_to Answer.where(question_id:question.id).length.to_s+" Answers",url_for(controller: :answers,action: :answers_show,question_id:question.id)%>
+	   	<%= link_to Answer.where(question_id:question.id).length.to_s+" Answers",url_for(controller: :answers,action: :answers_show,question_id:question.id),id: "answercount_#{question.id}"%>
 	   	</span>
 	</div>
 </section>
