--- a/app/views/comments/_docomment.html.erb
+++ b/app/views/comments/_docomment.html.erb
@@ -10,3 +10,8 @@
   <%= submit_tag("Add")%>
   <%end%>
 </div>
+<div id="show_comments<%=@answerid%>">
+</div>
+<div id="loadmoreblock<%=answerid%>">
+<%= link_to "view comment",url_for(controller: :comments,action: :loadmore,answerid: @answerid,offset:0),remote: true,id: "comment_more#{answerid}"%> 
+</div>
