--- a/app/views/comments/loadmore.js.erb
+++ b/app/views/comments/loadmore.js.erb
@@ -1,4 +1,5 @@
- $('#comment_more<%=@answerid%>').attr('href',"/comments/loadmore?answerid=<%=@answerid%>&offset=<%=@offset+10%>");
- $('#show_comments<%=@answerid%>').append("<%= escape_javascript (render 'showcomments',answerid: @answerid,comments: @comments,more: @ifmore)%>");
-
-  
+  $('#show_comments_id<%=@answerid%>').append("<%= escape_javascript (render 'showcomments',answerid: @answerid,comments: @comments,more: @ifmore)%>");
+  $('#comment_more<%=@answerid%>').attr('href',"/comments/loadmore?answerid=<%=@answerid%>&offset=<%=@offset+10%>");
+  <%if !@ifmore%>
+  $('#loadmoreblock<%=@answerid%>').empty();
+  <%end%>
