--- a/app/views/comments/_docomment.html.erb
+++ b/app/views/comments/_docomment.html.erb
@@ -4,9 +4,9 @@
   <%else%>
   <img src="/uploads/profiledefault.png">
   <%end%>
-  <%=form_tag(controller: "comments",action: "createcomment",method: "post") do%>
+  <%=form_tag('/comments/createcomment',remote:true)do%>
   <%= hidden_field_tag(:answer_id,answerid)%>
-  <%= text_field_tag(:comment)%>
+  <%= text_field_tag(:comment,'',placeholder: 'Write comment here...',id: 'comment_text'+answerid.to_s)%>
   <%= submit_tag("Add")%>
   <%end%>
 </div>
